@@ -53,7 +53,7 @@ Gem::Specification.new do |s|
     s.specification_version = 3
 
     if Gem::Version.new(Gem::VERSION) >= Gem::Version.new('1.2.0') then
-      s.add_development_dependency(%q<narray>, ["~> 0.6.0.0"])
+      s.add_runtime_dependency(%q<narray>, ["~> 0.6.0.0"])
       s.add_development_dependency(%q<bundler>, ["~> 1.0.0"])
       s.add_development_dependency(%q<jeweler>, ["~> 1.8.0"])
       s.add_development_dependency(%q<rake>, ["~> 0.9.2"])
